[package]
name = "snake-rs"
version = "0.1.0"
authors = ["limit <limitliu@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rand = "0.7"

[dependencies.sdl2]
version = "0.34"
default-features = false
features = ["ttf", "image", "gfx", "mixer"]
